Fixed: Bug 25640 - Characters after quote cut off for plain-text mails

--- a/ui/apps/io.ox/mail/style.css
+++ b/ui/apps/io.ox/mail/style.css
@@ -578,7 +578,7 @@ h4.mail-attachment-preview {
 }
 
 .content.fixed-width-font {
-    font-family: Monaco, monospace;
+    font-family: monospace;
  }
 
 @media (max-width: 700px) {
